# Minecraft-

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-discord-bot.yml  build-neoforge.yml  build-network-api.yml  build-website.yml  build.yml  ci.yml
discord-bot/: Dockerfile  README.md  pyproject.toml
discord-bot/app/: __init__.py  api_client.py  bot.py  formatting.py
discord-bot/tests/: test_formatting.py
docs/: ATM11_PRIVATE_TEST_PLAN.md  CI_TROUBLESHOOTING.md  CONSOLE_CONNECTIVITY_PLAN.md  COSMETICS_SYSTEM.md  LAUNCH_PORTALS_AND_ECONOMY_PLAN.md  PLAYER_PORTAL.md  POPULAR_SERVER_FEATURE_BLUEPRINT.md  SHOP_CATALOG.md  STAFF_ROLES_AND_COMMANDS.md
infrastructure/: .env.example  README.md  docker-compose.yml
network-api/: Dockerfile  README.md  pyproject.toml
network-api/app/: __init__.py  main.py  models.py  portal.html  portal.py  portal_models.py  portal_store.py  store.py
network-api/tests/: test_api.py  test_portal.py
platform/atm11/: compatibility.json
scripts/: verify-local.sh
server-core/: build.gradle
server-core/src/main/java/com/community/servercore/: ServerCoreRuntime.java
server-core/src/main/java/com/community/servercore/audit/: AuditEvent.java  AuditEventType.java  AuditSink.java  InMemoryAuditSink.java
server-core/src/main/java/com/community/servercore/command/: CommandActor.java  CommandResult.java  CosmeticCommandService.java  EconomyCommandService.java  PortalCommandService.java  RoleCommandService.java  StaffAreaCommandService.java
server-core/src/main/resources/: servercore-default.json
servercore-neoforge/: build.gradle  gradle.properties  settings.gradle
website/: Dockerfile  README.md  app.js  config.js  index.html  nginx.conf  styles.css
(+77 files in other folders)
