[project]
name = "servercore-network-api"
version = "0.1.0"
description = "Internal API for ServerCore player, duel, leaderboard, and audit data"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn[standard]>=0.35,<1.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1.0",
  "pytest>=8.4,<9.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
