[project]
name = "servercore-network-api"
version = "0.3.0"
description = "Internal API and Discord-authenticated player portal for ServerCore"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.11,<3.0",
  "uvicorn[standard]>=0.35,<1.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.4,<9.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
